# px-assets

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LIBRARIES.md  PLAN.md  README.md  SPEC.md  VISUALS-PLAN.md  test.sh
benches/: pipeline.rs
defaults/: default.brush.md  default.palette.md  default.shader.md  default.stamp.md  empty.shape.md  png.target.md
examples/ct-91/: README.md  ct-91.palette.md  ct-91.shader.md  font-digits.shape.md  font-punctuation.shape.md  font-symbols.shape.md  font-upper.shape.md  gems.shape.md  test.target.md  tiles.shape.md  title-letters.shape.md  title.prefab.md  ui-labels.shape.md
examples/mission-improbable/: README.md  fills.shape.md  level-example.map.md  lifts.shape.md  mi.brush.md  mi.palette.md  mi.shader.md  mi.style.md  npcs.shape.md  objects.shape.md  platforms.shape.md  player.shape.md  room.map.md  row.prefab.md  sprites.shape.md  test.palette.md  test.shader.md  test.target.md
examples/pac-man/: README.md  collectibles.shape.md  fills.shape.md  ghosts.shape.md  maze-walls.shape.md  maze.map.md  pac-man.palette.md  pac-man.shader.md  pacman.shape.md
examples/tetris/: README.md  blocks.shape.md  pieces.prefab.md  playfield.map.md  test.target.md  tetris.palette.md  tetris.shader.md  ui.shape.md
src/: error.rs  lib.rs  main.rs  output.rs
src/cli/: build.rs  completions.rs  init.rs  list.rs  mod.rs  palette.rs  slice.rs  validate.rs
src/discovery/: loader.rs  manifest.rs  mod.rs  scanner.rs
src/parser/: body.rs  brush.rs  document.rs  frontmatter.rs  legend.rs  (+10 more)
tests/: fixtures
(+24 files in other folders)
